[gd_scene load_steps=3 format=3 uid="uid://b1ddhtmmke34x"]

[ext_resource type="Script" path="res://scenes/dex/dex.gd" id="1_dex_script"]
[ext_resource type="PackedScene" uid="uid://cwxkm5mw4opxq" path="res://record_image.tscn" id="3_6jk22"]

[node name="Dex" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dex_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
text = "<<"

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Animal Dex"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Content" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentMargin" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ContentContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Dex Number" type="Label" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecordImage" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer" instance=ExtResource("3_6jk22")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer"]
layout_mode = 2
alignment = 1

[node name="PreviousButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Previous"

[node name="NextButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Next"

[node name="EditButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Edit Entry"

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/Content/ContentMargin/ContentContainer"]
layout_mode = 2
